--- a/templates/register.html
+++ b/templates/register.html
@@ -14,6 +14,10 @@
         <h5>Delete Service Area</h5>
         <input type="button" class="btn btn-danger" id="delete-polygon" value="Delete Area" onClick="editor.clear();">
         <hr>
+        <form>
+            <input id="coordinate-input" value="">
+        </form>
+        <hr>
         <h5>Current Service Area coordinates</h5>
         <div id="coordinate-list"></div>
     </div>
@@ -22,6 +26,7 @@
     <script type="text/javascript">
         var editor;
         var $display = document.getElementById("coordinate-list");
+        var $input = document.getElementById("coordinate-input");
 
         function initMap() {
             // Init editor
@@ -30,12 +35,16 @@
             // Called when something changes
             editor.onChange = function() {
                 var points = editor.getPoints();
-                console.log('points =', points);
+                updateForm(points);
                 updateDisplay(points);
             };
 
             // Autolocate
             editor.autolocate();
+        }
+
+        function updateForm(points) {
+            $input.value = JSON.stringify(points);
         }
 
         function updateDisplay(points) {
@@ -47,7 +56,7 @@
                 "<ul>",
                 // Generate each point
                 points.map(function(point) {
-                    return "<li>" + point + "</li>";
+                    return "<li>" + point.lat + "," + point.lng + "</li>";
                 }).join('\n'),
                 "</ul>",
             ].join('\n');
