--- a/templates/base.html
+++ b/templates/base.html
@@ -45,13 +45,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}">Djareas</a>
+                <a class="navbar-brand" href="{% url 'register_area' %}">Djareas</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Register Service Area</a>
+                        <a href="{% url 'register_area' %}">Register Service Area</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
