Fix form submission

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
         <form method="post">
             {% csrf_token %}
             <input id="company-input" value="" placeholder="Company's Name" name="name" required>
-            <input id="coordinate-input" value="" name="coordinates">
+            <input id="coordinate-input" value="" name="json_coordinates">
             <input class="btn btn-success" value="Save Area" type="submit">
         </form>
         <hr>
