--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,15 @@
 
 {% block content %}
 <div class="row">
+    {% if errors %}
+    <div class="col-lg-12">
+        {% for field, f_errors in errors.items %}
+            {% for error in f_errors %}
+                <div class="alert alert-danger">{{ field }}: {{ error }}</div>
+            {% endfor %}
+        {% endfor %}
+    </div>
+    {% endif %}
     <div class="col-lg-12">
         <h2>Register your Service Area</h2>
         <hr>
