--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
         <form method="post">
             {% csrf_token %}
             <input id="company-input" value="" placeholder="Company's Name" name="name" required>
-            <input id="coordinate-input" value="" name="json_coordinates">
+            <input id="coordinate-input" hidden="true" value="" name="json_coordinates">
             <input class="btn btn-success" value="Save Area" type="submit">
         </form>
         <hr>
