--- a/templates/register.html
+++ b/templates/register.html
@@ -21,12 +21,12 @@
     </div>
     <div class="col-md-3">
         <h5>Delete Service Area</h5>
-        <input type="button" class="btn btn-danger" id="delete-polygon" value="Delete Area" onClick="editor.clear();">
-        <hr>
         <form method="post">
             {% csrf_token %}
             <input id="company-input" value="" placeholder="Company's Name" name="name" required>
             <input id="coordinate-input" hidden="true" value="" name="json_coordinates">
+            <hr>
+            <a href="#" class="btn btn-danger" id="delete-polygon" onClick="editor.clear();">Reset</a>
             <input class="btn btn-success" value="Save Area" type="submit">
         </form>
         <hr>
